# pcap_ts_extract_desktop

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/desktop_egui/: Cargo.toml
crates/desktop_egui/src/: main.rs
scripts/: package-macos-dmg.sh
src/: main.rs
